[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://levels/level_escuela/player/player_esc.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.60384

[node name="player_esc" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.19209e-07, 2.14577e-06 )
scale = Vector2( 0.128, 0.128 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="down_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 200 )
collision_mask = 16
collide_with_areas = true

[node name="right_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 200, 0 )
collision_mask = 16
collide_with_areas = true

[node name="up_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -200 )
collision_mask = 16
collide_with_areas = true

[node name="left_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -200, 0 )
collision_mask = 16
collide_with_areas = true
